fix cors and add node_modules to .gitignore